2002-10-04  Richard Williamson   <rjw@apple.com>

        Changed WebDOMNode name to WebDebugDOMNode to make room for
        real node.
        
        * WebKit.exp:
        * WebKit.pbproj/project.pbxproj:
        * WebView.subproj/WebDOMNode.h: Removed.
        * WebView.subproj/WebDOMNode.m: Removed.

2002-10-04  Richard Williamson   <rjw@apple.com>

        * WebKit.pbproj/project.pbxproj:

2002-10-03  Richard Williamson   <rjw@apple.com>

        Changed name of controller's resourceProgressDelegate methods to resourceLoadDelegate.

        * WebCoreSupport.subproj/WebSubresourceClient.m:
        (-[WebSubresourceClient initWithLoader:dataSource:]):
        (-[WebSubresourceClient handle:didReceiveResponse:]):
        (-[WebSubresourceClient handle:didReceiveData:]):
        (-[WebSubresourceClient handleDidFinishLoading:]):
        (-[WebSubresourceClient handle:didFailLoadingWithError:]):
        * WebView.subproj/WebController.h:
        * WebView.subproj/WebController.m:
        (-[WebController setResourceLoadDelegate:]):
        (-[WebController resourceLoadDelegate]):
        (-[WebController setDownloadDelegate:]):
        (-[WebController downloadDelegate]):
        * WebView.subproj/WebMainResourceClient.m:
        (-[WebMainResourceClient initWithDataSource:]):
        (-[WebMainResourceClient handle:didReceiveResponse:]):

2002-10-03  Richard Williamson   <rjw@apple.com>

        Always call resourceRequest:willSendRequest: on resourceProgressDelegate.
         
        * WebView.subproj/WebMainResourceClient.m:
        (-[WebMainResourceClient handle:willSendRequest:]):

2002-10-03  Richard Williamson   <rjw@apple.com>

        Add calls to downloadProgressDelegate.
        
        * WebView.subproj/WebMainResourceClient.m:
        (-[WebMainResourceClient handle:willSendRequest:]):
        (-[WebMainResourceClient handle:didReceiveResponse:]):
        (-[WebMainResourceClient handle:didReceiveData:]):